[project]
name = "daily-chore"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "flask>=3.1.3",
    "googlenewsdecoder>=0.1.7",
    "gunicorn>=25.2.0",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.4",
    "newspaper4k>=0.9.4.1",
    "requests>=2.33.0",
    "yfinance>=1.2.0",
]
