[project]
name = "brief-news"
version = "2.0.0"
description = "Automated news aggregation and briefing system that collects financial and general news from multiple sources, processes RSS feeds, and delivers curated summaries"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.12",
    "flask>=3.1.3",
    "googlenewsdecoder>=0.1.7",
    "gunicorn>=25.2.0",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.4",
    "newspaper4k>=0.9.4.1",
    "requests>=2.33.0",
    "yfinance>=1.2.0",
    # ML ranking pipeline
    "sentence-transformers>=3.0.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
]
